@@ -1,6 +1,9 @@
 This file lists the incompatible changes between Version 2.x and older versions
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.8 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+  - t_STR used to compare as larger than any real number via < or >
+    operators. Such a comparison now raises an exception.
+
 * Specific to the PARI library:
 ===============================
   - renamed RgX_mullow -> RgXn_mul, RgX_sqrlow -> RgXn_sqr,
