@@ -942,6 +942,12 @@ non trivial information from the error context:
   Mod(6, 12)
 @eprog\noindent We can also rethrow the exception: \kbd{error(E)}.
 
+\subsec{Infinity (\typ{INFINITY})}%
+\kbdsidx{t_INFINITY}
+
+There are only two objects of this type \kbd{+oo} and \kbd{-oo}, representing
+$\pm\infty$.
+
 \section{GP operators}\label{se:operators}
 
 \noindent Loosely speaking, an \idx{operator} is a function, usually
