@@ -424,6 +424,7 @@ gentypes(void)
   t_VECSMALL: vec. small ints  [ code ] [ x_1 ] ... [ x_k ]\n\
   t_CLOSURE: functions [ code ] [ arity ] [ code ] [ operand ] [ data ] [ text ]\n\
   t_ERROR  : error context     [ code ] [ errnum ] [ dat_1 ] ... [ dat_k ]\n\
+  t_INFINITY: a*infinity       [ code ] [ a ]\n\
 \n");
 }
 
