@@ -3965,6 +3965,7 @@ INLINE long   gval(GEN x, long v);
 INLINE GEN    identity_perm(long l);
 INLINE int    equali1(GEN n);
 INLINE int    equalim1(GEN n);
+INLINE long   inf_get_sign(GEN x);
 INLINE int    is_bigint(GEN n);
 INLINE int    is_const_t(long t);
 INLINE int    is_extscalar_t(long t);
@@ -3999,6 +4000,8 @@ INLINE GEN    mkcolcopy(GEN x);
 INLINE GEN    mkcols(long x);
 INLINE GEN    mkcomplex(GEN x, GEN y);
 INLINE GEN    mkerr(long n);
+INLINE GEN    mkmoo();
+INLINE GEN    mkoo();
 INLINE GEN    mkfrac(GEN x, GEN y);
 INLINE GEN    mkfraccopy(GEN x, GEN y);
 INLINE GEN    mkintmod(GEN x, GEN y);
