@@ -7,10 +7,6 @@
 [0, -1, 1]
 [0, -1, 1]
 [0, -1, 1]
-0
-0
-0
-1
   ***   at top-level: Mod(1,3)>0
   ***                         ^--
   *** _>_: forbidden comparison t_INTMOD , t_INT.
