@@ -14,4 +14,7 @@
 [0, 1]
 [0, 0, 0, 1]
 [1, 1]
+1
+1
+0
 Total time spent: 0
