@@ -1,7 +1,6 @@
 ? allocatemem(20*10^6);
   ***   Warning: new stack size = 20000000 (19.073 Mbytes).
-? check(a,b)=my(t=abs((a-b)/b));if(t,ceil(log(t)/log(10)),"-oo");
-? oo=[1];
+? check(a,b)=my(t=abs((a-b)/b));if(t,ceil(log(t)/log(10)),-oo);
 ? \p96
    realprecision = 96 significant digits
 ? check(intcirc(s=1,0.5,zeta(s)),1)
@@ -23,19 +22,19 @@
 ? F=truncate(f(t+O(t^7)));
 ? g(x)=if(x>1e-18,f(x),subst(F,t,x));
 ? check(intnum(x=0,[oo,1],f(x)),Euler)
-"-oo"
+-oo
 ? check(intnum(x=0,[oo,1],g(x)),Euler)
-"-oo"
+-oo
 ? check(intnum(x=0,1,1/sqrt(x)),2)
 -59
 ? check(intnum(x=[0,-1/2],1,1/sqrt(x)),2)
-"-oo"
+-oo
 ? check(intnum(x=0,[oo,1],sin(x)/x),Pi/2)
 -2
 ? check(intnum(x=0,[oo,-I],sin(x)/x),Pi/2)
-"-oo"
+-oo
 ? check(intnum(x=0,[oo,-2*I],sin(2*x)/x),Pi/2)
-"-oo"
+-oo
 ? A=intnum(x=0,1,(1-cos(x))/x^2)+intnum(x=1,oo,1/x^2)-intnum(x=1,[oo,I],cos(x)/x^2);
 ? check(A,Pi/2)
 -96
@@ -47,7 +46,7 @@
 ? check(intnum(x=0,oo,sin(x)^3*exp(-x),tab),3/10)
 -96
 ? check(intnum(x=0,[oo,-I],x^2*sin(x)),-2)
-"-oo"
+-oo
 ? tab=intnuminit(-1,1);
 ? check(intnum(x=-1,1,intnum(y=-sqrt(1-x^2),sqrt(1-x^2),x^2+y^2,tab),tab),Pi/2)
 -93
@@ -84,10 +83,10 @@
    realprecision = 96 significant digits
 ? T=intnuminitgen(t,0,[1],exp(2*sinh(t)));
 ? check(intnum(x=0,[1],1/(1+x^2),T),Pi/2)
-"-oo"
+-oo
 ? T=intnuminitgen(t,0,[[1],1],exp(t-exp(-t)));
 ? check(intnum(x=0,[[1],1],exp(-x),T),1)
-"-oo"
+-oo
 ? intfourierexp(t=0,[[1],1],1/2,exp(-t^2))
 0.07515645001618094506724269142337819200573257288846457257682421833136020654
 01315089580450881170413 - 0.408148557374490719018171389392074027664154880556
@@ -114,4 +113,4 @@
 ? sumpos(n=1,g(1/n))
 0.94536905472633293526609521540827019810
 ? print("Total time spent: ",gettime);
-Total time spent: 20736
+Total time spent: 8773
