@@ -9,9 +9,11 @@ test(x,x+1)
 test(x,y)
 test(O(x),x+O(x^2))
 
-1 > "a"
-1. > "a"
-1/2 > "a"
-"a" > 0
+v=[-oo, 1/2, 1, oo];
+for (i=1, #v, for(j=i+1,#v, if( v[i] >= v[j], error([i,j]))));
+for (i=1, #v, for(j=i+1,#v, if( !(v[i] < v[j]), error([i,j]))));
+for (i=1, #v, if(!(v[i] == v[i]), error(i)));
+for (i=1, #v, if(!(v[i] === v[i]), error(i)));
+
 Mod(1,3) > 0
 lex(Vecsmall([1,2]),Vecsmall([1,3]))
