@@ -22,3 +22,6 @@ quadgen(5)==quadgen(13)
 L=List([1,2]);
 [L===List([]), L===List([2,1]), L===List([1]), L===L]
 [[]==0, []~==0]
+oo===oo
+-oo===-oo
+oo===-oo
